--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,6 @@ jobs:
 
     # - name: Deploy react app to github pages
       # uses: tanwanimohit/deploy-react-to-ghpages@v1.0.1
-    - uses: Build
+    - name: Build
       run: npm run build
 
