--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
-          node-version: 20
+        node-version: 20
     - name: Install dependcy
       run: npm install
 
@@ -23,4 +22,6 @@ jobs:
       # uses: tanwanimohit/deploy-react-to-ghpages@v1.0.1
     - name: Build
       run: npm run build
+      env: 
+        CI: false
 
