--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
     "smooth-scroll": "^16.1.3",
+    "typed.js": "^2.1.0",
     "typewriter-effect": "^2.21.0"
   },
   "scripts": {
